--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,82 @@
+/* --------------------------------------------------------
+	VueJS - Task Manager
+	Version: 	0.0.1
+	Author: 	Steven Morrison
+	Website:	www.zaffri.com
+	GitHub:		github.com/Zaffri
+-------------------------------------------------------- */
+
+html {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
+    -moz-box-sizing: inherit;
+	-webkit-box-sizing: inherit;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+}
+
+#app {
+    min-width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    padding: 0 20px 20px 20px;
+    overflow-x: scroll;
+    white-space: nowrap;
+    background-color: #34175A;
+}
+
+#new-category-wrapper, #new-category-input {
+    border-radius: 5px;
+    outline: none;
+}
+
+#new-category-wrapper {
+    width: 380px;
+    padding: 15px 15px 0 15px;
+    background: #432669;
+}
+
+#new-category-input {
+    width: 350px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+#category-list {
+    padding: 15px 0 15px 0;
+}
+
+.category-name {
+    margin-left: 10px;
+}
+
+#category-list .category-list-item, .task-list {
+    background: #fff;
+    border-radius: 5px;
+}
+
 #category-list .category-list-item {
     display: inline-block;
     vertical-align: top;
+    margin-right: 15px;
     width: 20%;
+    padding-top: 15px;
 }
 
-.task-list{
+.task-list {
     padding: 15px 10px;
 }
 
 .task-list-item {
+    list-style: none;
     width: 100%;
 }
