SM: Category edit name - styles touched up.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,27 @@ html {
     padding: 15px 0 15px 0;
 }
 
+.category-name-wrapper {
+    cursor: text;
+    padding: 0 10px 0 10px;
+}
+
+.category-name {
+    cursor: text;
+    padding: 3px 0 3px 0;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.category-name:hover {
+    background: #fcfcfc;
+}
+
+.category-name-edit-input {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .category-delete-icon {
     padding: 0 10px;
     font-size: 12pt;
@@ -93,10 +114,6 @@ html {
     border-radius: 8px;
     border: solid 2px #ccc;
     display: inline-block;
-}
-
-.category-name {
-    margin-left: 10px;
 }
 
 #category-list .category-list-item, .task-list {
