--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,7 @@ html {
 }
 
 .category-name:hover {
-    background: #fcfcfc;
+    background: #FCFFD1;
 }
 
 .category-name-edit-input, .task-name-edit-input {
@@ -174,6 +174,11 @@ html {
 
 .task-text {
     padding-top: 6px;
+    cursor: text;
+}
+
+.task-text:hover {
+    background: #FCFFD1;
 }
 
 .task-complete {
